[package]
name = "boardgame-api"
version = "0.1.0"
authors = ["Akio-m <ahigachika@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = "1.0.117"
serde_json = "1.0"
async-trait = "0.1.42"

[dev-dependencies]
mock-it = "0.3.0"