[package]
name = "boardgame-api"
version = "0.1.0"
authors = ["Akio-m <ahigachika@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = "1.0.117"
serde_json = "1.0"
async-trait = "0.1.42"
mockall = "0.10.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"